# joey-pico-project

./: CMakeLists.txt
ProjectFiles/: CMakeLists.txt  blinkExternalLED.c  buttonDetection.c  main.c  temperatureADC.c
ProjectFiles/include/: BIT.h  blinkExternalLED.h  buttonDetection.h  cgi.h  lwipopts.h  ssi.h  temperatureADC.h
html_files/: index.shtml
